--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,1 +1,7 @@
-<p>note works!</p>
+<div class="card card-plain card-note">
+  <div class="card-body">
+    <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, dolorem!</p>
+  </div>
+  <div class="close-btn">x</div>
+</div>
