additional styling to note component

--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,7 +1,13 @@
 <div class="card card-plain card-note">
-  <div class="card-body">
+  <div class="card-body note-body">
     <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, dolorem!</p>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, dolorem! Lorem, ipsum dolor
+      sit amet consectetur adipisicing elit. Rerum nemo amet nulla sed. Dolorem rerum neque sit officiis itaque animi.
+      Rerum nemo amet nulla sed. Dolorem rerum neque sit officiis itaque animi.
+    </p>
+    <div class="fade-out-truncation">
+
+    </div>
   </div>
   <div class="close-btn">x</div>
 </div>
