--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -2,11 +2,33 @@
   position: relative;
   transition: box-shadow 0.15s ease-out;
 
+  .note-body {
+    position: relative;
+    max-height: 120px;
+    overflow: hidden;
+
+    .fade-out-truncation {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 50%;
+      background: linear-gradient(
+        to bottom,
+        rgba(white, 0) 0%,
+        rgba(white, 0.8) 50%,
+        white 100%
+      );
+    }
+  }
+
   &:hover {
     cursor: pointer;
-    // background-color: #11cdef; //#fbf6340
-    // color: #fff;
     box-shadow: 13px 13px 50px -24px #11cdef;
+
+    .close-btn {
+      opacity: 1;
+      transition-delay: 0.35s;
+    }
   }
 
   .close-btn {
@@ -17,7 +39,18 @@
     top: 12px;
     right: 12px;
     border-radius: 50px;
-    background: red;
+    background: lighten(#fb6340, 25%);
     color: #fff;
+    opacity: 0;
+    text-align: center;
+    transition: opacity 0.2s ease-out;
+
+    &:hover {
+      background: #fb6340;
+    }
+
+    &:active {
+      background: darken(#fb6340, 25%);
+    }
   }
 }
