handle component truncqtion

--- a/src/app/notes-list/notes-list.component.html
+++ b/src/app/notes-list/notes-list.component.html
@@ -16,5 +16,7 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <app-note></app-note>
+    <app-note></app-note>
+    <app-note></app-note>
   </div>
 </div>
