--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,13 +1,8 @@
-<div class="card card-plain card-note">
-  <div class="card-body note-body">
+<div class="card card-plain card-note mb-4">
+  <div class="card-body note-body" #noteText>
     <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, dolorem! Lorem, ipsum dolor
-      sit amet consectetur adipisicing elit. Rerum nemo amet nulla sed. Dolorem rerum neque sit officiis itaque animi.
-      Rerum nemo amet nulla sed. Dolorem rerum neque sit officiis itaque animi.
-    </p>
-    <div class="fade-out-truncation">
-
-    </div>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <div #truncator class="fade-out-truncation"></div>
   </div>
   <div class="close-btn">x</div>
 </div>
