--- a/src/app/notes-list/notes-list.component.html
+++ b/src/app/notes-list/notes-list.component.html
@@ -3,11 +3,7 @@
     <form class="form my-2 my-lg-0">
       <div class="form-row">
         <div class="col-md-8">
-          <input
-            class="form-control"
-            type="text"
-            placeholder="filter notes..."
-          />
+          <input class="form-control" type="text" placeholder="filter notes...">
         </div>
         <div class="col-md-4">
           <button class="btn btn-outline-success" type="submit">Filter</button>
@@ -16,10 +12,10 @@
     </form>
   </div>
 </div>
-<hr class="my-3" />
+<hr class="my-3">
 <div class="row">
   <div class="col-md-8 offset-md-2">
-    <app-note [title]="noteTitle" [body]="noteBody"></app-note>
+    <app-note></app-note>
     <app-note></app-note>
     <app-note></app-note>
   </div>
