--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -1,1 +1,31 @@
-<p>note-details works!</p>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-8 offset-md-2">
+      <div class="row">
+        <div class="col-md-12">
+          <h4 class="title">Create Note</h4>
+        </div>
+      </div>
+      <div class="card card-plain">
+        <div class="card-body">
+          <form>
+            <div class="mb-3">
+              <label for="noteTitle">Title</label>
+              <input type="text" class="form-control" />
+            </div>
+            <div class="mb-3">
+              <label for="noteBody">Description</label>
+              <textarea name="noteBody" id="" class="form-control"></textarea>
+            </div>
+            <div class="mt-3">
+              <button class="btn btn-success" type="submit">Create</button>
+              <button class="btn btn-secondary ml-2" type="submit">
+                Cancel
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
