add communication between notes-list and note

--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,7 +1,7 @@
 <div class="card card-plain card-note mb-4">
   <div class="card-body note-body" #noteText>
-    <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <h4 class="card-title">{{ noteTitle }}</h4>
+    <p class="card-text">{{ noteBody }}</p>
     <div #truncator class="fade-out-truncation"></div>
   </div>
   <div class="close-btn">x</div>
