--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-8 offset-md-2">
       <div class="row">
         <div class="col-md-12">
-          <h4 class="title">Create Note</h4>
+          <h4 class="title">Note Details</h4>
         </div>
       </div>
       <div class="card card-plain">
