--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -1,1 +1,50 @@
-<p>note-details works!</p>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-8 offset-md-2">
+      <div class="row">
+        <div class="col-md-12">
+          <h4 class="title">Create Note</h4>
+        </div>
+      </div>
+      <div class="card card-plain">
+        <div class="card-body">
+          <form novalidate [formGroup]="noteForm" (ngSubmit)="createNote()">
+            <div class="mb-3">
+              <label for="title">Title</label>
+              <input type="text" class="form-control" formControlName="title" [ngClass]="{
+                  'is-invalid':
+                    (noteForm.get('title').touched ||
+                      noteForm.get('title').dirty) &&
+                    !noteForm.get('title').valid
+                }" />
+              <div class="invalid-feedback">
+                <span *ngIf="noteForm.get('title').errors?.required">Title is required</span>
+                <span *ngIf="noteForm.get('title').errors?.minlength">Title must be longer than 3 characters</span>
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="body">Description</label>
+              <textarea name="body" id="" class="form-control" formControlName="body" [ngClass]="{
+                  'is-invalid':
+                    (noteForm.get('body').touched ||
+                      noteForm.get('body').dirty) &&
+                    !noteForm.get('body').valid
+                }"></textarea>
+              <div class="invalid-feedback">
+                <span *ngIf="noteForm.get('body').errors?.required">Please write something dope</span>
+              </div>
+            </div>
+            <div class="mt-3">
+              <button class="btn btn-success" type="submit" [disabled]="!noteForm.valid">
+                Create
+              </button>
+              <button class="btn btn-secondary ml-2" type="submit">
+                Cancel
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
