--- a/src/app/notes-list/notes-list.component.html
+++ b/src/app/notes-list/notes-list.component.html
@@ -1,22 +1,18 @@
 <div class="row mt-5">
   <div class="col-md-12">
-    <form class="form my-2 my-lg-0">
-      <div class="form-row">
-        <div class="col-md-8">
-          <input class="form-control" type="text" placeholder="filter notes...">
-        </div>
-        <div class="col-md-4">
-          <button class="btn btn-outline-success" type="submit">Filter</button>
-        </div>
+    <div class="form-row">
+      <div class="col-md-8">
+        <input class="form-control" type="text" placeholder="filter notes...">
       </div>
-    </form>
+      <div class="col-md-4">
+        <button class="btn btn-outline-success" type="submit">Filter</button>
+      </div>
+    </div>
   </div>
 </div>
 <hr class="my-3">
 <div class="row">
-  <div class="col-md-8 offset-md-2">
-    <app-note></app-note>
-    <app-note></app-note>
-    <app-note></app-note>
+  <div class="col-md-8 offset-md-2" *ngFor='let note of notes'>
+    <app-note [title]='note.title' [body]='note.body'></app-note>
   </div>
 </div>
