--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -38,7 +38,7 @@
               <button class="btn btn-success" type="submit" [disabled]="!noteForm.valid">
                 Create
               </button>
-              <button class="btn btn-secondary ml-2" type="submit">
+              <button class="btn btn-secondary ml-2" type="submit" (click)='discard()'>
                 Cancel
               </button>
             </div>
